opam-version: "2.0"
synopsis: "Libbpf maps API"
description: "High level API's for interacting with BPF maps in OCaml"
maintainer: ["Lee Koon Wen"]
authors: ["Lee Koon Wen"]
license: ["ISC" "BSD-3-Clause"]
tags: ["bindings" "bpf" "libbpf"]
homepage: "https://github.com/koonwen/ocaml-libbpf"
doc: "https://koonwen.github.io/ocaml-libbpf"
bug-reports: "https://github.com/koonwen/ocaml-libbpf/issues"
depends: [
  "dune" {>= "3.13"}
  "ctypes" {>= "0.22.0"}
  "ctypes-foreign" {>= "0.22.0"}
  "libbpf" {= version}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/koonwen/ocaml-libbpf.git"
