; (rule
;  (mode
;   (promote (until-clean)))
;  (targets minimal.bpf.o)
;  (deps
;   Makefile
;   (glob_files *.bpf.c))
;  (action
;   (no-infer
;    (run make))))

(rule
 (mode
  (promote (until-clean)))
 (targets minimal.bpf.o)
 (deps minimal.bpf.c (source_tree %{project_root}/src/include))
 (action
  (system "clang -g -O2 -target bpf -I ../src/include/ -c minimal.bpf.c")))
