; (rule
;  (mode
;   (promote (until-clean)))
;  (targets minimal.bpf.o)
;  (deps
;   Makefile
;   (glob_files *.bpf.c))
;  (action
;   (no-infer
;    (run make))))

(rule
 (mode
  (promote (until-clean)))
 (targets minimal.bpf.o)
 (deps minimal.bpf.c ../src/include/bpf/bpf_helpers.h)
 (action
  (system "clang -g -O2 -target bpf -I ../src/include/ -c minimal.bpf.c")))
