; (rule
;  (mode
;   (promote (until-clean)))
;  (targets minimal.bpf.o)
;  (deps
;   Makefile
;   (glob_files *.bpf.c))
;  (action
;   (no-infer
;    (run make))))

(rule
 (mode
  (promote (until-clean)))
 (targets minimal.bpf.o)
 (deps minimal.bpf.c ../src/root/usr/include/bpf/bpf_helpers.h)
 (action
  (system
   "clang -g -O2 -target bpf -I ../src/root/usr/include/ -I /usr/include/%{architecture}-linux-gnu/ -c minimal.bpf.c")))

; ../src/root/usr/include/                      Local libbpf headers
; /usr/include/%{architecture}-linux-gnu/       Find asm/types.h for eBPF code
