(executables
 (names bootstrap bootstrap_c minimal)
 (libraries ocaml_libbpf ctypes.foreign))

; Below is repetitive build rules to compile *.bpf.c eBPF C source code that runs in the kernel

(rule
 (mode
  (promote (until-clean)))
 (targets minimal.bpf.o)
 (deps minimal.bpf.c %{project_root}/src/root/usr/include/bpf/bpf_helpers.h)
 (action
  (system
   "clang -g -O2 -target bpf -I%{project_root}/src/root/usr/include/ -I/usr/include/%{architecture}-linux-gnu/ -c minimal.bpf.c")))

(rule
 (mode
  (promote (until-clean)))
 (targets bootstrap.bpf.o)
 (deps
  vmlinux.h
  bootstrap.bpf.c
  bootstrap.h
  %{project_root}/src/root/usr/include/bpf/bpf_helpers.h)
 (action
  (system
   "clang -g -O2 -target bpf -I%{project_root}/src/root/usr/include/ -I/usr/include/%{architecture}-linux-gnu/ -c bootstrap.bpf.c")))

; If missing "vmlinux.h", use `make vmlinux` to generate this

; %{project_root}/src/root/usr/include/         Vendored libbpf headers
; /usr/include/%{architecture}-linux-gnu/       Find asm/types.h for eBPF code
