(library
 (public_name ocaml_libbpf)
 (ctypes
  (external_library_name libbpf)
  (build_flags_resolver pkg_config)
  (headers
   (include bpf/libbpf.h))
  (type_description
   (instance Types)
   (functor Type_description))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
