(tests
 (deps minimal.bpf.o)
 (names version maps)
 (libraries ocaml_libbpf))

(rule
 (mode
  (promote (until-clean)))
 (target minimal.bpf.o)
 (deps %{project_root}/bpf/minimal.bpf.o)
 (action
  (copy %{deps} %{target})))

; (rule
;  (alias tp)
;  (mode promote)
;  (action
;   (with-stdout-to
;    tp.txt
;    (bash "sudo cat /sys/kernel/debug/tracing/available_events | grep io_uring"))))
